--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <h3>Долго, дорого, скрупулезно.</h3>
             <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
             <a href="blank.html">Узнать больше</a>
-            <img src="img/slide1.png" width="760" height="431" alt="Три iPhones">
+            <img src="img/slides/three-iPhones.png" width="760" height="431" alt="Три iPhones">
           </li>
           <li>
             <h3>Любим математику как никто другой</h3>
             <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
             <a href="blank.html">Узнать больше</a>
-            <img src="img/slide2.png" width="760" height="431" alt="Два экрана MAC">
+            <img src="img/slides/two-MAC-screens.png" width="760" height="431" alt="Два экрана MAC">
           </li>
           <li>
             <h3>Только ночь, только хардкор</h3>
             <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
             <a href="blank.html">Узнать больше</a>
-            <img src="img/slide3.png" width="760" height="431" alt="Планшет и iPhone">
+            <img src="img/slides/tablet-and-iPhone.png" width="760" height="431" alt="Планшет и iPhone">
           </li>
         </ul>
       </section>
@@ -56,19 +56,19 @@
         <h2>Услуги</h2>
         <ul>
         <li>
-          <img src="img/illustration-1 1.png" width="300" height="146" alt="Ноутбук на красном фоне">
+          <img src="img/laptop.png" width="300" height="146" alt="Ноутбук на красном фоне">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <button type="button">Заказать</button>
         </li>
         <li>
-          <img src="img/illustration-2 1.png" width="300" height="146" alt="Черный и белый iPhone на зелёном фоне">
+          <img src="img/two-iPhones.png" width="300" height="146" alt="Черный и белый iPhone на зелёном фоне">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <button type="button">Заказать</button>
         </li>
         <li>
-          <img src="img/illustration-3 1.png" width="300" height="146" alt="Экран презентации на жёлтом фоне">
+          <img src="img/flipchart.png" width="300" height="146" alt="Флипчарт на жёлтом фоне">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <button type="button">Заказать</button>
@@ -78,7 +78,7 @@
 
       <section>
         <h2>О компании</h2>
-        <img src="img/nerds-illustration 1.png" width="360" height="208" alt="Логотип дизайн-студии «Nёrd's»">
+        <img src="img/nerds-logo2.png" width="360" height="208" alt="Логотип дизайн-студии «Nёrd's»">
         <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
         <h3>Выполняем заказы на разработку:</h3>
@@ -101,10 +101,10 @@
       <section>
         <h2>Клиенты</h2>
         <ul>
-          <li><a href="blank.html"><img src="img/logo_htmlacademy 1.svg" width="199" height="57" alt="Логотип htmlacademy"></a></li>
-          <li><a href="blank.html"><img src="img/logo-2 1.png" width="209" height="90" alt="Логотип барбершопа BORODINSKI"></a></li>
-          <li><a href="blank.html"><img src="img/logo-3 1.png" width="185" height="52" alt="Логотип PINK"></a></li>
-          <li><a href="blank.html"><img src="img/logo-4 1.png" width="173" height="84" alt="Логотип MISHKA"></a></li>
+          <li><a href="blank.html"><img src="img/clients/logo_htmlacademy.svg" width="199" height="57" alt="Логотип htmlacademy"></a></li>
+          <li><a href="blank.html"><img src="img/clients/logo-borodinski.png" width="209" height="90" alt="Логотип барбершопа BORODINSKI"></a></li>
+          <li><a href="blank.html"><img src="img/clients/logo-pink.png" width="185" height="52" alt="Логотип PINK"></a></li>
+          <li><a href="blank.html"><img src="img/clients/logo-mishka.png" width="173" height="84" alt="Логотип MISHKA"></a></li>
         </ul>
       </section>
 
