--- a/catalog.html
+++ b/catalog.html
@@ -109,7 +109,7 @@
             </a>
               <p>Информационный сайт для туристов</p>
               <p>
-                <img src="img/catalog/sedona.png" width="358px" height="578px" alt="Sedona Информационный сайт для туристов">
+                <img src="img/catalog/sedona.png" width="358" height="578" alt="Sedona Информационный сайт для туристов">
               </p>
             <p>
               <button type="button">9 900 ₽</button>
@@ -121,7 +121,7 @@
             </a>
               <p>Продуктовый лендингприложения для iOS и Android</p>
               <p>
-                <img src="img/catalog/pink.png" width="358px" height="578px" alt="Pink App Продуктовый лендингприложения для iOS и Android">
+                <img src="img/catalog/pink.png" width="358" height="578" alt="Pink App Продуктовый лендингприложения для iOS и Android">
               </p>
             <p>
               <button type="button">9 900 ₽</button>
@@ -133,7 +133,7 @@
             </a>
             <p>Сайт салона красоты.Для мужчин, да.</p>
               <p>
-                <img src="img/catalog/barbershop.png" width="358px" height="578px" alt="Barbershop Сайт салона красоты. Для мужчин, да.">
+                <img src="img/catalog/barbershop.png" width="358" height="578" alt="Barbershop Сайт салона красоты. Для мужчин, да.">
               </p>
             <p>
               <button type="button">9 900 ₽</button>
@@ -145,7 +145,7 @@
             </a>
             <p>Интернет-магазин вязаных игрушек</p>
               <p>
-                <img src="img/catalog/mishka.png" width="358px" height="578px" alt="MISHKA Интернет-магазин вязаных игрушек">
+                <img src="img/catalog/mishka.png" width="358" height="578" alt="MISHKA Интернет-магазин вязаных игрушек">
               </p>
             <p>
               <button type="button">9 900 ₽</button>
@@ -157,7 +157,7 @@
             </a>
             <p>Лендинг курсов повышения квалификации</h3></p>
               <p>
-                <img src="img/catalog/aplus.png" width="358px" height="578px" alt="A Plus Лендинг курсов повышения квалификации">
+                <img src="img/catalog/aplus.png" width="358" height="578" alt="A Plus Лендинг курсов повышения квалификации">
               </p>
             <p>
               <button type="button">9 900 ₽</button>
@@ -169,7 +169,7 @@
             </a>
             <p>Промо-сайт производителякрафтового кваса</p>
               <p>
-                <img src="img/catalog/kvast.png" width="358px" height="578px" alt="КВАСТ Промо-сайт производителя крафтового кваса">
+                <img src="img/catalog/kvast.png" width="358" height="578" alt="КВАСТ Промо-сайт производителя крафтового кваса">
               </p>
             <p>
               <button type="button">9 900 ₽</button>
