--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Дизайн-студия «Nёrd's»</title>
@@ -8,85 +8,89 @@
     <link rel="apple-touch-icon" href="favicon/180.png">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
-  <body>
-    <header>
-      <nav>
-        <a>
+
+  <body class="page-body">
+    <header class="page-header">
+      <nav class="page-navigation">
+        <a class="page-header-logo">
           <img src="img/nerds-logo.svg" width="159.87" height="65.02" alt="Логотип дизайн-студии «Nёrd's»">
         </a>
-        <ul>
+        <ul class="site-navigation">
           <li><a href="blank.html">Студия</a></li>
           <li><a href="blank.html">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="blank.html">Контакты</a></li>
         </ul>
-        <a href="blank.html"><img src="img/cart-icon.svg" width="15" height="15" alt="Корзина">Корзина</a>
+        <a class="cart-link" href="blank.html"><img src="img/cart-icon.svg" width="15" height="15" alt="Корзина">Корзина</a>
       </nav>
     </header>
 
-    <main>
+    <main class="container">
 
       <h1>Дизайн-студия «Nёrd's»</h1>
 
-      <section>
+      <section class="features">
         <h2>Преимущества</h2>
-        <ul>
-          <li>
+        <ul class="features-list">
+          <li class="feature-item">
             <h3>Долго, дорого, скрупулезно.</h3>
             <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-            <a href="blank.html">Узнать больше</a>
+            <a class="button" href="blank.html">Узнать больше</a>
             <img src="img/slides/three-iPhones.png" width="760" height="431" alt="Три iPhones">
           </li>
-          <li>
+          <li class="feature-item">
             <h3>Любим математику как никто другой</h3>
             <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-            <a href="blank.html">Узнать больше</a>
+            <a class="button" href="blank.html">Узнать больше</a>
             <img src="img/slides/two-MAC-screens.png" width="760" height="431" alt="Два экрана MAC">
           </li>
-          <li>
+          <li class="feature-item">
             <h3>Только ночь, только хардкор</h3>
             <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-            <a href="blank.html">Узнать больше</a>
+            <a class="button" href="blank.html">Узнать больше</a>
             <img src="img/slides/tablet-and-iPhone.png" width="760" height="431" alt="Планшет и iPhone">
           </li>
         </ul>
       </section>
 
-      <section>
+      <section class="services">
         <h2>Услуги</h2>
-        <ul>
-        <li>
+        <ul class="services-list">
+        <li class="services-item">
           <img src="img/laptop.png" width="300" height="146" alt="Ноутбук на красном фоне">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <button type="button">Заказать</button>
+          <button class="button button-red" type="button">Заказать</button>
         </li>
-        <li>
+        <li class="services-item">
           <img src="img/two-iPhones.png" width="300" height="146" alt="Черный и белый iPhone на зелёном фоне">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <button type="button">Заказать</button>
+          <button class="button button-green" type="button">Заказать</button>
         </li>
-        <li>
+        <li class="services-item">
           <img src="img/flipchart.png" width="300" height="146" alt="Флипчарт на жёлтом фоне">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <button type="button">Заказать</button>
+          <button class="button button-yellow" type="button">Заказать</button>
         </li>
       </ul>
       </section>
 
-      <section>
+      <section class="company">
         <h2>О компании</h2>
-        <img src="img/nerds-logo2.png" width="360" height="208" alt="Логотип дизайн-студии «Nёrd's»">
-        <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+        <p class="company-info">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
         <h3>Выполняем заказы на разработку:</h3>
-        <ul>
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        <ul class="company-list">
+          <li class="company-item">Веб-сайтов любой сложности</li>
+          <li class="company-item">Мобильных приложений для iOS и Android</li>
+          <li class="company-item">Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
+      </section>
+
+      <section class="statistics">
+        <img src="img/nerds-logo2.png" width="360" height="208" alt="Логотип дизайн-студии «Nёrd's»">
         <h3>с 2004 года Любим точность во всем:</h3>
         <dl>
           <dt>146<sub>%</sub></dt>
@@ -98,45 +102,57 @@
         </dl>
       </section>
 
-      <section>
+      <section class="clients">
         <h2>Клиенты</h2>
-        <ul>
-          <li><a href="blank.html"><img src="img/clients/logo_htmlacademy.svg" width="199" height="57" alt="Логотип htmlacademy"></a></li>
-          <li><a href="blank.html"><img src="img/clients/logo-borodinski.png" width="209" height="90" alt="Логотип барбершопа BORODINSKI"></a></li>
-          <li><a href="blank.html"><img src="img/clients/logo-pink.png" width="185" height="52" alt="Логотип PINK"></a></li>
-          <li><a href="blank.html"><img src="img/clients/logo-mishka.png" width="173" height="84" alt="Логотип MISHKA"></a></li>
+        <ul class="clients-list">
+          <li class="clients-item">
+            <a href="blank.html"><img src="img/clients/logo_htmlacademy.svg" width="199" height="57" alt="Логотип htmlacademy"></a>
+          </li>
+          <li class="clients-item">
+            <a href="blank.html"><img src="img/clients/logo-borodinski.png" width="209" height="90" alt="Логотип барбершопа BORODINSKI"></a>
+          </li>
+          <li class="clients-item">
+            <a href="blank.html"><img src="img/clients/logo-pink.png" width="185" height="52" alt="Логотип PINK"></a>
+          </li>
+          <li class="clients-item">
+            <a href="blank.html"><img src="img/clients/logo-mishka.png" width="173" height="84" alt="Логотип MISHKA"></a>
+          </li>
         </ul>
       </section>
 
     </main>
 
-  <footer>
-    <section>
+  <footer class="main-footer">
+    <section class="contacts">
       <h2>Контакты</h2>
       <p>NЁRDS DESIGN STUDIO<br>
         наб. Реки Карповки,<br>
         5 лит П, Санкт-Петербург<br>
-        <a href="tel:+78005558628">+7 800 555-86-28</a><br>
-        <a href="blank.html">Напишите нам</a>
+        <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a><br>
+        <a class="button button-contacts" href="blank.html">Напишите нам</a>
       </p>
       <!-- Здесь будет карта -->
     </section>
-    <section>
-      <h2>Давайте дружить</h2>
-      <ul>
-        <li>
+
+    <section class="footer-social">
+      <ul class="social-list">
+        <li class="social-item">
           <a href="#"><img src="img/vk-icon.svg" width="26.01" height="15" alt="Логотип Вконтакте">Вконтакте</a>
         </li>
-        <li>
+        <li class="social-item">
           <a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Фейсбук">Фейсбук</a>
         </li>
-        <li>
+        <li class="social-item">
           <a href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Инстаграм">Инстаграм</a>
         </li>
       </ul>
-      <p>Давайте дружить, это выгодно!</p>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
     </section>
+
+    <section class="promo">
+      <h2 class="promo-header">Давайте дружить, это выгодно!</h2>
+      <p class="promo-text">Скидка 10% для друзей из социальных сетей.</p>
+    </section>
+
   </footer>
   </body>
 </html>
