--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="favicon/180.png">
     <link rel="manifest" href="manifest.webmanifest">
+
+    <link href="normalize.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
 
   <body class="page-body">
@@ -137,13 +140,13 @@
     <section class="footer-social">
       <ul class="social-list">
         <li class="social-item">
-          <a href="#"><img src="img/vk-icon.svg" width="26.01" height="15" alt="Логотип Вконтакте">Вконтакте</a>
+          <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26.01" height="15" alt="Логотип Вконтакте">Вконтакте</a>
         </li>
         <li class="social-item">
-          <a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Фейсбук">Фейсбук</a>
+          <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Фейсбук">Фейсбук</a>
         </li>
         <li class="social-item">
-          <a href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Инстаграм">Инстаграм</a>
+          <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Инстаграм">Инстаграм</a>
         </li>
       </ul>
     </section>
