--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="utf-8">
     <title>Дизайн-студия «Nёrd's»</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="favicon/180.png">
-    <link rel="manifest" href="manifest.webmanifest">
-
-    <link href="normalize.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body class="page-body">
