--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Дизайн-студия «Nёrd's»</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body class="page-body">
@@ -14,13 +14,19 @@
         <a class="page-header-logo">
           <img src="img/nerds-logo.svg" width="159.87" height="65.02" alt="Логотип дизайн-студии «Nёrd's»">
         </a>
-        <ul class="site-navigation">
-          <li><a href="blank.html">Студия</a></li>
-          <li><a href="blank.html">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="blank.html">Контакты</a></li>
-        </ul>
+        <div class="page-navigation-wrapper">
+          <div class="container">
+            <ul class="site-navigation">
+              <li><a href="blank.html">Студия</a></li>
+              <li><a href="blank.html">Клиенты</a></li>
+              <li><a href="catalog.html">Магазин</a></li>
+              <li><a href="blank.html">Контакты</a></li>
+            </ul>
+          <div class="user-navigation">
         <a class="cart-link" href="blank.html"><img src="img/cart-icon.svg" width="15" height="15" alt="Корзина">Корзина</a>
+      </div>
+    </div>
+  </div>
       </nav>
     </header>
 
@@ -35,19 +41,19 @@
             <h3>Долго, дорого, скрупулезно.</h3>
             <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
             <a class="button" href="blank.html">Узнать больше</a>
-            <img src="img/slides/three-iPhones.png" width="760" height="431" alt="Три iPhones">
+              <img src="img/slides/three-iPhones.png" width="760" height="431" alt="Три iPhones">
           </li>
           <li class="feature-item">
             <h3>Любим математику как никто другой</h3>
             <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
             <a class="button" href="blank.html">Узнать больше</a>
-            <img src="img/slides/two-MAC-screens.png" width="760" height="431" alt="Два экрана MAC">
+              <img src="img/slides/two-MAC-screens.png" width="760" height="431" alt="Два экрана MAC">
           </li>
           <li class="feature-item">
             <h3>Только ночь, только хардкор</h3>
             <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
             <a class="button" href="blank.html">Узнать больше</a>
-            <img src="img/slides/tablet-and-iPhone.png" width="760" height="431" alt="Планшет и iPhone">
+              <img src="img/slides/tablet-and-iPhone.png" width="760" height="431" alt="Планшет и iPhone">
           </li>
         </ul>
       </section>
@@ -56,7 +62,9 @@
         <h2>Услуги</h2>
         <ul class="services-list">
         <li class="services-item">
+          <figure class="services-content">
           <img src="img/laptop.png" width="300" height="146" alt="Ноутбук на красном фоне">
+        </figure>
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <button class="button button-red" type="button">Заказать</button>
@@ -92,11 +100,11 @@
         <img src="img/nerds-logo2.png" width="360" height="208" alt="Логотип дизайн-студии «Nёrd's»">
         <h3>с 2004 года Любим точность во всем:</h3>
         <dl>
-          <dt>146<sub>%</sub></dt>
+          <dt>146<sup>%</sup></dt>
             <dd>Уровень самоотдачи</dd>
-          <dt>100<sub>%</sub></dt>
+          <dt>100<sup>%</sup></dt>
             <dd>Соблюдение сроков</dd>
-          <dt>50<sub>%</sub></dt>
+          <dt>50<sup>%</sup></dt>
             <dd>Минимальная предоплата</dd>
         </dl>
       </section>
