Стилизация главной страницы

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
   <footer class="main-footer">
     <section class="contacts">
       <h2>Контакты</h2>
-      <p>NЁRDS DESIGN STUDIO<br>
-        наб. Реки Карповки,<br>
-        5 лит П, Санкт-Петербург<br>
+      <h3>NЁRDS DESIGN STUDIO</h3>
+      <p>наб. Реки Карповки,<br>
+         5 лит П, Санкт-Петербург<br>
         <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a><br>
         <a class="button button-contacts" href="blank.html">Напишите нам</a>
       </p>
