--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
         <img src="img/nerds-logo2.png" width="360" height="208" alt="Логотип дизайн-студии «Nёrd's»">
         <h3>с 2004 года Любим точность во всем:</h3>
         <dl>
-          <dt>146<sup>%</sup></dt>
-            <dd>Уровень самоотдачи</dd>
-          <dt>100<sup>%</sup></dt>
-            <dd>Соблюдение сроков</dd>
-          <dt>50<sup>%</sup></dt>
-            <dd>Минимальная предоплата</dd>
+          <dt>Уровень самоотдачи</dt>
+            <dd>146<sup>%</sup></dd>
+          <dt>Соблюдение сроков</dt>
+            <dd>100<sup>%</sup></dd>
+          <dt>Минимальная предоплата</dt>
+            <dd>50<sup>%</sup></dd>
         </dl>
       </section>
 
@@ -160,7 +160,25 @@
       <h2 class="promo-header">Давайте дружить, это выгодно!</h2>
       <p class="promo-text">Скидка 10% для друзей из социальных сетей.</p>
     </section>
-
   </footer>
+
+  <section class="appointment">
+    <h2>Напишите нам</h2>
+    <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
+      <p class="appointment-item">
+        <label for="appointment-name">Ваше имя:</label>
+        <input id="appointment-name" type="text" name="name" placeholder="Имя Фамилия">
+      </p>
+      <p class="appointment-item">
+        <label for="appointment-email">Ваш email:</label>
+        <input id="appointment-email" type="text" name="email" placeholder="email@example.com">
+      </p>
+      <p class="appointment-item">
+        <label for="appointment-comment">Текст письма:</label>
+        <input id="appointment-comment" type="text" name="comment" placeholder="В свободной форме">
+      </p>
+      <button class="button" type="submit">Отправить</button>
+      </form>
+    </section>
   </body>
 </html>
