--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 
   <section class="appointment">
     <h2>Напишите нам</h2>
+    <button class="button" type="submit">Закрыть</button>
     <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
       <p class="appointment-item">
         <label for="appointment-name">Ваше имя:</label>
