сетка на гридах на главной странице

--- a/catalog.html
+++ b/catalog.html
@@ -9,13 +9,14 @@
   </head>
 
   <body class="page-body inner-page">
+
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="page-header-logo" href="index.html">
-          <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип дизайн-студии «Nёrd's»">
-        </a>
-        <div class="page-navigation-wrapper">
-          <div class="container">
+        <div class="page-header-bar">
+          <div class="page-navigation-wrapper">
+            <a class="page-header-logo" href="index.html">
+              <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип дизайн-студии «Nёrd's»">
+            </a>
             <ul class="site-navigation">
               <li><a href="blank.html">Студия</a></li>
               <li><a href="blank.html">Клиенты</a></li>
@@ -23,10 +24,10 @@
               <li><a href="blank.html">Контакты</a></li>
             </ul>
           <div class="user-navigation">
-        <a class="cart-link" href="blank.html"><img src="img/cart-icon.svg" width="15" height="15" alt="Корзина">Корзина</a>
-      </div>
-    </div>
-  </div>
+            <a class="cart-link" href="blank.html"><img src="img/cart-icon.svg" width="15" height="15" alt="Корзина">Корзина</a>
+          </div>
+          </div>
+        </div>
       </nav>
     </header>
 
