--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   </head>
 
   <body class="page-body">
+
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="page-header-logo">
-          <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип дизайн-студии «Nёrd's»">
-        </a>
-        <div class="page-navigation-wrapper">
-          <div class="container">
+        <div class="page-header-bar">
+          <div class="page-navigation-wrapper">
+            <a class="page-header-logo">
+              <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип дизайн-студии «Nёrd's»">
+            </a>
             <ul class="site-navigation">
               <li><a href="blank.html">Студия</a></li>
               <li><a href="blank.html">Клиенты</a></li>
@@ -24,14 +25,14 @@
             </ul>
           <div class="user-navigation">
         <a class="cart-link" href="blank.html"><img src="img/cart-icon.svg" width="15" height="15" alt="Корзина">Корзина</a>
-      </div>
-    </div>
-  </div>
+          </div>
+          </div>
+        </div>
       </nav>
     </header>
 
     <main class="container">
-
+      <div class="main-features">
       <h1>Дизайн-студия «Nёrd's»</h1>
 
       <section class="features">
@@ -57,6 +58,7 @@
           </li>
         </ul>
       </section>
+      </div>
 
       <section class="services">
         <h2>Услуги</h2>
@@ -130,6 +132,7 @@
     </main>
 
   <footer class="main-footer">
+    <div class="container">
     <section class="contacts">
       <h2>Контакты</h2>
       <h3>NЁRDS DESIGN STUDIO</h3>
@@ -160,6 +163,7 @@
       <h2 class="promo-header">Давайте дружить, это выгодно!</h2>
       <p class="promo-text">Скидка 10% для друзей из социальных сетей.</p>
     </section>
+  </div>
   </footer>
 
   <section class="appointment">
@@ -181,5 +185,6 @@
       <button class="button" type="submit">Отправить</button>
       </form>
     </section>
+
   </body>
 </html>
