--- a/index.html
+++ b/index.html
@@ -31,65 +31,67 @@
       </nav>
     </header>
 
-    <main class="container">
+    <main>
       <div class="main-features">
-      <h1>Дизайн-студия «Nёrd's»</h1>
+        <div class="container">
+          <h1>Дизайн-студия «Nёrd's»</h1>
 
-      <section class="features">
-        <h2>Преимущества</h2>
-        <ul class="features-list">
-          <li class="feature-item">
-            <h3>Долго, дорого, скрупулезно.</h3>
-            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-            <a class="button" href="blank.html">Узнать больше</a>
-              <img src="img/slides/three-iPhones.png" width="760" height="431" alt="Три iPhones">
-          </li>
-          <li class="feature-item">
-            <h3>Любим математику как никто другой</h3>
-            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-            <a class="button" href="blank.html">Узнать больше</a>
-              <img src="img/slides/two-MAC-screens.png" width="760" height="431" alt="Два экрана MAC">
-          </li>
-          <li class="feature-item">
-            <h3>Только ночь, только хардкор</h3>
-            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-            <a class="button" href="blank.html">Узнать больше</a>
-              <img src="img/slides/tablet-and-iPhone.png" width="760" height="431" alt="Планшет и iPhone">
-          </li>
-        </ul>
-      </section>
+          <section class="features">
+            <h2>Преимущества</h2>
+            <ul class="features-list">
+              <li class="feature-item">
+                <h3>Долго, дорого, скрупулезно.</h3>
+                <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                <a class="button" href="blank.html">Узнать больше</a>
+                  <img src="img/slides/three-iPhones.png" width="760" height="431" alt="Три iPhones">
+              </li>
+              <li class="feature-item">
+                <h3>Любим математику как никто другой</h3>
+                <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+                <a class="button" href="blank.html">Узнать больше</a>
+                  <img src="img/slides/two-MAC-screens.png" width="760" height="431" alt="Два экрана MAC">
+              </li>
+              <li class="feature-item">
+                <h3>Только ночь, только хардкор</h3>
+                <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+                <a class="button" href="blank.html">Узнать больше</a>
+                  <img src="img/slides/tablet-and-iPhone.png" width="760" height="431" alt="Планшет и iPhone">
+              </li>
+            </ul>
+          </section>
+        </div>
       </div>
 
+      <div class="container">
       <section class="services">
         <h2>Услуги</h2>
         <ul class="services-list">
         <li class="services-item">
-          <figure class="services-content">
           <img src="img/laptop.png" width="300" height="146" alt="Ноутбук на красном фоне">
-        </figure>
           <h3>Веб-сайты</h3>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
           <button class="button button-red" type="button">Заказать</button>
         </li>
         <li class="services-item">
           <img src="img/two-iPhones.png" width="300" height="146" alt="Черный и белый iPhone на зелёном фоне">
           <h3>Приложения</h3>
-          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
           <button class="button button-green" type="button">Заказать</button>
         </li>
         <li class="services-item">
           <img src="img/flipchart.png" width="300" height="146" alt="Флипчарт на жёлтом фоне">
           <h3>Презентации</h3>
-          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
           <button class="button button-yellow" type="button">Заказать</button>
         </li>
       </ul>
       </section>
 
+      <div class="index-column">
       <section class="company">
         <h2>О компании</h2>
         <p class="company-info">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br> превыше креатива. Работаем не покладая рук, как роботы.</p>
         <h3>Выполняем заказы на разработку:</h3>
         <ul class="company-list">
           <li class="company-item">Веб-сайтов любой сложности</li>
@@ -98,10 +100,11 @@
         </ul>
       </section>
 
+
       <section class="statistics">
         <img src="img/nerds-logo2.png" width="360" height="208" alt="Логотип дизайн-студии «Nёrd's»">
         <h3>с 2004 года Любим точность во всем:</h3>
-        <dl>
+        <dl class="description-list">
           <dt>Уровень самоотдачи</dt>
             <dd>146<sup>%</sup></dd>
           <dt>Соблюдение сроков</dt>
@@ -110,6 +113,7 @@
             <dd>50<sup>%</sup></dd>
         </dl>
       </section>
+    </div>
 
       <section class="clients">
         <h2>Клиенты</h2>
@@ -128,6 +132,7 @@
           </li>
         </ul>
       </section>
+    </div>
 
     </main>
 
@@ -144,6 +149,7 @@
       <!-- Здесь будет карта -->
     </section>
 
+    <div class="footer-columns">
     <section class="footer-social">
       <h2>Давайте дружить!</h2>
       <ul class="social-list">
@@ -163,6 +169,7 @@
       <h2 class="promo-header">Давайте дружить, это выгодно!</h2>
       <p class="promo-text">Скидка 10% для друзей из социальных сетей.</p>
     </section>
+    </div>
   </div>
   </footer>
 
