--- a/catalog.html
+++ b/catalog.html
@@ -31,12 +31,14 @@
       </nav>
     </header>
 
-    <main class="container">
-
+    <main>
       <section class="main-header">
+        <div class="container">
         <h1>Магазин готовых шаблонов</h1>
+        </div>
       </section>
 
+      <div class="page-catalog container">
       <section class="filters">
         <h2>Фильтр товаров</h2>
         <form class="filter" method="get" action="https://echo.htmlacademy.ru" oninput="priceoutput.value=price.value">
@@ -194,9 +196,11 @@
           </li>
         </ul>
       </section>
+        </div>
     </main>
 
     <footer class="main-footer">
+      <div class="container">
       <section class="contacts">
         <h2>Контакты</h2>
         <h3>NЁRDS DESIGN STUDIO</h3>
@@ -208,6 +212,7 @@
         <!-- Здесь будет карта -->
       </section>
 
+      <div class="footer-columns">
       <section class="footer-social">
         <h2>Давайте дружить!</h2>
         <ul class="social-list">
@@ -227,7 +232,8 @@
         <h2 class="promo-header">Давайте дружить, это выгодно!</h2>
         <p class="promo-text">Скидка 10% для друзей из социальных сетей.</p>
       </section>
+      </div>
+    </div>
     </footer>
-
     </body>
 </html>
