--- a/catalog.html
+++ b/catalog.html
@@ -125,7 +125,7 @@
               <a class="button template-button" href="blank.html">9 900 ₽</a>
             </div>
             <p class="template-item-image">
-              <img src="img/catalog/sedona.png" width="358" height="578" alt="Sedona Информационный сайт для туристов">
+            <img class="template-item-image" src="img/catalog/sedona.png" width="358" height="578" alt="Sedona Информационный сайт для туристов">
             </p>
           </li>
           <li class="template-item">
