стилизация сортировки на внутренней странице

--- a/catalog.html
+++ b/catalog.html
@@ -106,11 +106,11 @@
           <li class="sort-item">
             <a href="#">По названию</a>
           </li>
-          <li class="sort-item">
-            <a href="#"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Стрелка вниз">Вниз</a>
+          <li class="sort-item arrow">
+            <a href="#"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Стрелка вниз"></a>
           </li>
-          <li class="sort-item">
-            <a href="#"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Стрелка вверх">Вверх</a>
+          <li class="sort-item arrow">
+            <a href="#"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Стрелка вверх"></a>
           </li>
         </ul>
     </section>
